# ChangeLog for app-admin/eselect-rails
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect-rails/ChangeLog,v 1.14 2008/05/13 13:36:13 armin76 Exp $

  13 May 2008; Raúl Porcel <armin76@gentoo.org> eselect-rails-0.11.ebuild:
  ia64 stable wrt #221309

  12 May 2008; Markus Rothe <corsair@gentoo.org> eselect-rails-0.11.ebuild:
  Stable on ppc64; bug #221309

  11 May 2008; Ferris McCormick <fmccor@gentoo.org>
  eselect-rails-0.11.ebuild:
  Sparc stable, part of Bug #221309.

  11 May 2008; Markus Meier <maekke@gentoo.org> eselect-rails-0.11.ebuild:
  x86 stable, bug #221309

  11 May 2008; Hans de Graaff <graaff@gentoo.org> eselect-rails-0.11.ebuild:
  Stable on amd64, bug #221309

*eselect-rails-0.11 (15 Dec 2007)

  15 Dec 2007; Hans de Graaff <graaff@gentoo.org>
  +eselect-rails-0.11.ebuild:
  Version bump in preparation of Rails 2.0.x

  27 Nov 2007; Markus Rothe <corsair@gentoo.org> eselect-rails-0.10.ebuild:
  Added ~ppc64; bug #200159

  21 Oct 2007; Steve Dibb <beandog@gentoo.org> eselect-rails-0.10.ebuild:
  amd64 stable, security bug 195315

  16 Oct 2007; Raúl Porcel <armin76@gentoo.org> eselect-rails-0.10.ebuild:
  ia64 stable

  06 Oct 2007; Christian Faulhammer <opfer@gentoo.org>
  eselect-rails-0.10.ebuild:
  stable x86, bug 177209

  06 Oct 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  eselect-rails-0.10.ebuild:
  ppc stable, bug #177209

  05 Oct 2007; Ferris McCormick <fmccor@gentoo.org>
  eselect-rails-0.10.ebuild:
  Sparc stable --- part of Bug #177209

  03 Sep 2007; Joshua Nichols <nichoj@gentoo.org> eselect-rails-0.10.ebuild:
  Removed blockers against rails.

*eselect-rails-0.10 (01 Sep 2007)

  01 Sep 2007; Joshua Nichols <nichoj@gentoo.org> +metadata.xml,
  +eselect-rails-0.10.ebuild:
  Initial version, to support rails 1.1.6-r2 and 1.2.3-r1.
