@@ -1,6 +1,6 @@
 DIST eselect-rails-0.10.tar.bz2 2011 RMD160 900706f7be2d127a60518376b4b4af77029cdf43 SHA1 32f0a3fe4fd70f83ad22c999aa5c9b05a3498871 SHA256 1b6ffae6bae8b9461fc4ad5e479ec0207cf82bf6e3fdf47f09d5898367cd4977
 DIST eselect-rails-0.11.tar.bz2 1989 RMD160 27c87a865e12630ef1b71e3c41402a707ed26003 SHA1 c6f4dd76d8051478093487f20d59a44ebc49ecef SHA256 482df9527c16130b8b202fac1a745423d2419378f9415c7ee3c886fddcd7c35c
-EBUILD eselect-rails-0.10.ebuild 757 RMD160 2a24df8e99186aef759ef41ecf56f29a244d965d SHA1 f6b2b950c19b45c65edc2bba60f8177d2be6adbf SHA256 8d5ae119b078056eb2e4de6333980154ae2aee2b18c3f477c3f0d3e53cf98e75
-EBUILD eselect-rails-0.11.ebuild 757 RMD160 76bcceb643d556cafe0649f8352355c4016c35d8 SHA1 9ee2dadded437c086d2d80a920e6bc08b79d4591 SHA256 e06df5489073407e5eb1ee91cfba334867ef291339c75fe80518e25b78b268c7
-MISC ChangeLog 1875 RMD160 3b63e06f20565bfeaa73ec7012db939a951693a8 SHA1 3ecfff82e6f792e78978b03ad5c4d24a61930704 SHA256 40b6e3b0b6aa9052e1552a6e7edb57c54ef3ab9401a5b6fa41449ad2a01e5faf
+EBUILD eselect-rails-0.10.ebuild 745 RMD160 63b5be17856fd132a48aa67b08ef60049cf92860 SHA1 97ed77dc036c83f26cab19b469714949fe373ad1 SHA256 051bed914e833f06bdfbbda8d579165cf83f5aa28af048a53e7b0ca8365ff722
+EBUILD eselect-rails-0.11.ebuild 744 RMD160 d9d7c1c0960fca60a4328f7d7d87e4a5cfb74b59 SHA1 135299fc1da80be00439ff0b91a88bbb8cd7f0f9 SHA256 535d37f78bfad2e7c18756c4563f1ee9e5fd717fac89a791c7b31693ce3c0078
+MISC ChangeLog 1975 RMD160 0e1f71f24373ceea4c8f9e463fbdd4f2aadf5823 SHA1 e78a2409eef50ada4aab4501b9b95dbfbb3aef35 SHA256 c56f830f5492e12724899e10b057958044aee517d60d5ac3377b6a408feeb873
 MISC metadata.xml 157 RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 SHA1 8ce15dcc608eeb5616aeec610dc695cbe6f93e02 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c
