@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/eselect-rails
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect-rails/ChangeLog,v 1.14 2008/05/13 13:36:13 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect-rails/ChangeLog,v 1.15 2008/05/16 17:28:37 nixnut Exp $
+
+  16 May 2008; nixnut <nixnut@gentoo.org> eselect-rails-0.11.ebuild:
+  Stable on ppc wrt bug 221309
 
   13 May 2008; Raúl Porcel <armin76@gentoo.org> eselect-rails-0.11.ebuild:
   ia64 stable wrt #221309
